--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     "ext-mbstring": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.*"
+    "phpunit/phpunit": "4.*",
+    "ext-xdebug": "*"
   }
 }
