--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,12 @@ env:
     - ZEPHIRDIR=/usr/local/src/zephir
 
 before_script:
-  - "composer self-update"
-  - ./tests/ci/install_zephir.sh
+  - ./tests/ci/install.sh
   - zephir generate
   - cd ext && phpize && ./configure && make && sudo make install && phpenv config-add ../tests/ci/phelper.ini && cd ../tests
+  - cd ext && phpize --silent && ./configure --silent --enable-shell && make --silent && sudo make --silent install && phpenv config-add ../tests/ci/phelper.ini && cd ../
 
-script: phpunit
+script: phpunit ./tests/
 
 after_failure:
   - php -m
