Debug Travis CI part 9

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
 before_script:
   - ./tests/ci/install.sh
   - ./tests/ci/prepare.sh
+  - echo "extension=phelper.so" >> `php --ini | grep "Loaded Configuration" | sed -e "s|.*:\s*||"`
 
 script: phpunit ./tests/
 
