--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,9 @@ install:
   - composer --prefer-source install
   - composer require phalcon/zephir:0.5.9 --prefer-source
 
-env:
-  global:
-    - ZEPHIR_VER=0.5.9
-    - ZEPHIRDIR=/usr/local/src/zephir
-
 before_script:
   - (cd vendor/phalcon/zephir; ./unit-tests/ci/before_install.sh; ./install)
+  - ./vendor/bin/zephir generate
   - cd ext && phpize --silent && ./configure --silent --enable-phelper && make --silent && sudo make --silent install && phpenv config-add ../tests/ci/phelper.ini && cd ../
 
 script: phpunit ./tests/
