--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language:
   - c
 
 php:
+  - 5.3
   - 5.4
   - 5.5
   - 5.6
@@ -12,9 +13,11 @@ install:
   - composer require phalcon/zephir:0.5.9 --prefer-source
 
 before_script:
+  - git submodule --quiet update --init --recursive
   - (cd vendor/phalcon/zephir; ./unit-tests/ci/before_install.sh; ./install)
   - ./vendor/bin/zephir generate
-  - cd ext && phpize --silent && ./configure --silent --enable-phelper && make --silent && sudo make --silent install && phpenv config-add ../tests/ci/phelper.ini && cd ../
+  - cd ext && export CFLAGS="-g3 -O1 -std=gnu90 -Wall" && phpize --silent && ./configure --silent --enable-phelper && make --silent && sudo make --silent install && phpenv config-add ../tests/ci/phelper.ini && cd ../
+  - ulimit -c unlimited || true
 
 script: phpunit ./tests/
 
