--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,11 @@
     "ext-mbstring": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.*",
-    "ext-xdebug": "*"
+    "phpunit/phpunit": "4.*"
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "0.0.x-dev"
+    }
   }
 }
