--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,9 @@ php:
   - 5.6
 
 install:
+  - composer self-update
   - composer --prefer-source install
-  - composer require phalcon/zephir:0.5.9 --prefer-source
+  - composer require phalcon/zephir:dev-master --prefer-source
 
 before_script:
   - git submodule --quiet update --init --recursive
