--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,10 @@ before_script:
   - git submodule --quiet update --init --recursive
   - (cd vendor/phalcon/zephir; ./unit-tests/ci/before_install.sh; ./install)
   - ./vendor/bin/zephir generate
-  - cd ext && export CFLAGS="-g3 -O1 -std=gnu90 -Wall" && phpize --silent && ./configure --silent --enable-phelper && make --silent && sudo make --silent install && phpenv config-add ../tests/ci/phelper.ini && cd ../
+  - cd ext && export CFLAGS="-g3 -O1 -std=gnu90 -Wall" && phpize --silent && ./configure --silent --enable-phelper && make --silent && sudo make --silent install && phpenv config-add ../tests/ci/phelper.ini && cd ../tests/
   - ulimit -c unlimited || true
 
-script: phpunit ./tests/
+script: phpunit
 
 after_failure:
   - php -m
