--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
     },
     "stubs": {
         "path": "ide\/%version%\/%namespace%\/",
-        "stubs-run-after-generate": true
+        "stubs-run-after-generate": false
     },
     "warnings": {
         "unused-variable": true,
